<resources>
    <string name="app_name">GitNetwork</string>
    <string name="users">Пользователи</string>
    <string name="default_login_field">{LOGIN}</string>
    <string name="image_content_description">Github user image</string>
    <string name="default_name_field">{NAME}</string>
    <string name="info">Информация</string>
    <string name="bio">{BIO}</string>
    <string name="default_location_field">{LOCATION}</string>
    <string name="subs_title">Подписчики</string>
    <string name="default_company_field">{COMPANY}</string>
    <string name="default_email_field">{EMAIL}</string>
    <string name="default_blog_field">{BLOG}</string>
    <string name="default_sub_field">{count} подписчиков</string>
    <string name="default_repo_field">{count} репозиториев</string>
    <string name="github_api">Ожидается доступ к Github API</string>
</resources>